# PDF-Splitter

./: .gitignore  CLAUDE.md  README.md  build_v3.spec  pyproject.toml
pdf_splitter/: __init__.py  main.py
pdf_splitter/core/: naming.py  ocr_engine.py  pdf_processor.py
pdf_splitter/gui/: app.py
